fix alignment

--- a/src/app/resources/App.styl
+++ b/src/app/resources/App.styl
@@ -61,4 +61,5 @@ footer {
 .required {
     font-size: 200%
     font-weight: 900
+    line-height: 0
 }
